--- a/app/src/main/res/layout/activity_pesquisa_remedio.xml
+++ b/app/src/main/res/layout/activity_pesquisa_remedio.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_select_your_symptom"
-        android:textSize="24sp"
+        android:textSize="32sp"
         android:textColor="@color/black"
         android:layout_marginTop="24dp"
         android:layout_alignParentTop="true"
@@ -28,7 +28,8 @@
         android:layout_below="@+id/busca_texto_tela"
         android:layout_marginTop="48dp"
         android:layout_alignParentStart="true"
-        android:entries="@array/sintomas"/>
+        android:entries="@array/sintomas"
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/busca_botao"
@@ -46,7 +47,7 @@
         android:id="@+id/busca_titulo_resultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_below="@id/busca_botao"
         android:layout_marginTop="48dp"
