--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="buttonColor">#d8acff</color>
-    <color name="buttonColorFacebook">#6b73ff</color>
-    <color name="buttonColorGoogle">#FF1D52</color>
     <color name="white">#FFFFFF</color>
-    <color name="backgroundRenatoRPV">#FFBDDA</color>
+    <color name="backgroundRenatoRPV">#FFFFFF</color>
     <color name="backgroundRenatoRPVDark">#00e2b2</color>
     <color name="backgroundRenatoRPVDarker">#009979</color>
-    <color name="black">#000000</color>
+    <color name="black">#440C09</color>
 </resources>
